<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    android:background="#fffefe"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hp.hospitalondemand.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home"
            android:id="@+id/textView2"
            android:background="#e4e3e3"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="0"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"/>

        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/map1"
            android:id="@+id/mapimageButton"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hometext1"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="#e4e3e3"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:id="@+id/textView3"
            android:layout_row="2"
            android:layout_column="0" />


        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heart_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/heart1"
            android:layout_row="3"
            android:layout_column="0" />

        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/orthopedic_button"
            android:background="@drawable/orthopedics1"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/htextView4"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:layout_row="4"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text2"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView5"
            android:paddingBottom="20dp"
            android:paddingTop="10dp"
            android:layout_row="4"
            android:layout_column="1" />

        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/neuro1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/neurosurgery_button"
            android:layout_row="5"
            android:layout_column="0" />

        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/premature_button"
            android:background="@drawable/prematurebaby1"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text3"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView6"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:layout_row="6"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text4"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView7"
            android:layout_row="6"
            android:layout_column="1" />

        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/poision1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/stomach_button"
            android:layout_row="7"
            android:layout_column="0" />

        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/cancer1"
            android:id="@+id/cancer_button"
            android:layout_row="7"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text5"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:id="@+id/textView8"
            android:layout_row="8"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text6"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:id="@+id/textView9"
            android:layout_row="8"
            android:layout_column="1" />

        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eye_button"
            android:background="@drawable/eye1"
            android:layout_gravity="center_horizontal"
            android:layout_row="9"
            android:layout_column="0" />

        <ImageButton
            android:contentDescription="@string/contentdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gastric_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/gastric1"
            android:layout_row="9"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text7"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:id="@+id/textView10"
            android:layout_row="10"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text8"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:id="@+id/textView11"
            android:layout_row="10"
            android:layout_column="1" />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Large Text"-->
            <!--android:background="#e4e3e3"-->
            <!--android:layout_columnSpan="2"-->
            <!--android:layout_gravity="fill_horizontal"-->
            <!--android:gravity="center"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:paddingTop="20dp"-->
            <!--android:paddingBottom="20dp"-->
            <!--android:id="@+id/textView12"-->
            <!--android:layout_row="11"-->
            <!--android:layout_column="0" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:textSize="30sp"
            android:textColor="#fff"
            android:background="@drawable/buttonabout1"
            android:text="@string/about_button_name"
            android:id="@+id/about_button"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="11"
            android:layout_column="0" />
    </GridLayout>
</ScrollView>